# docker-blogger

./: .gitignore  Dockerfile  Makefile  PLAN.md  README.md  action.yml  pyproject.toml
.github/workflows/: docker-hub.yml  docker.yml  ghcr.yml  python-ci.yml
docs/: authentication_setup.md  implementation_plan.md  requirements.md  task.md  walkthrough.md
src/blogger/: __init__.py  __main__.py  main.py  publish.py
src/blogspot_publishing/: __init__.py  main.py  publish.py
tests/: __init__.py  test_publish.py  test_version.py
